--- a/readme
+++ b/readme
@@ -12,5 +12,5 @@ Given: Data-set in file 'ChallengeData.xlsx'
 Solution: (Back-end / logic) GHGMain.oml 
           (Front-end / GUI)  OurGui.oml
         
- You can also find the final presentation and see the GUI in action. 
+ You can also find the final presentation and see the GUI in action. : <a href="https://drive.google.com/file/d/1P0TP4LfapoQUJjQ7-T6MoEGxxZ2DWkJ3/view?usp=sharing">Presentation</a>
           
